@@ -22,11 +22,26 @@ L<Data::Hopen::G::Dag/run>.
 
 # }}}1
 
+# TODO merge visit_goal and visit_node into visit(node|goal => $node)
+#Process a L<Data::Hopen::G::Node> or L<Data::Hopen::G::Goal>.
+
 =head1 FUNCTIONS
 
 =head2 visit_goal
 
 Process a L<Data::Hopen::G::Goal>.
+
+Called after the node runs.  Invoked as:
+
+    $visitor->visit_goal($goal, \@predecessors);
+
+where C<$goal> is the goal node and C<@predecessors> is a list of that node's
+predecessors in the DAG.
+
+Before this is called, C<< $goal->outputs >> (L<Data::Hopen::G::Node/outputs>)
+is set to the hashref of outputs produced by running that node.
+
+Any return value of C<visit_goal()> is ignored.
 
 =cut
 
@@ -34,7 +49,8 @@ sub visit_goal { ... }
 
 =head2 visit_node
 
-Process a graph node that is not a C<Data::Hopen::G::Goal>.
+Process a graph node that is not a C<Data::Hopen::G::Goal>.  All other details
+are the same as
 
 =cut
 
