@@ -4,6 +4,11 @@ Revision history for Data-Hopen
     - Breaking changes in Data::Hopen::G::GraphBuilder:
         - Replace scalar node property with arrayref nodes property
         - goal/default_goal(): connect all nodes to the goal
+    - Breaking changes in Data::Hopen::G:
+        - Remove Data::Hopen::G::Op --- it didn't add anything over ...::Node,
+          so just use Node directly.
+    - Data::Hopen::G::Runnable::_run() can now return undef, and ...::run()
+      will replace it with {}.
 
 0.000019    2020-12-26
     - No longer treat -phase specially when running DAGs.
